  * Update copyright notices.
  * Debian::Control::Stanza::Source: add XS-Autobuild field; mention all
    fields in POD, and sort list.

  [ Salvatore Bonaccorso ]
  * create packages with Standards-Version 3.9.2.
  * Bump Standards-Version to 3.9.2. 
  * Debian::Control::Stanza::Source: Add DM-Upload-Allowed field to
    supported fields for source stanza in debian/control.

  [ Nicholas Bamber ]
  * Updated authorship notice

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 22 Apr 2011 17:09:27 +0200

dh-make-perl (0.72-1) unstable; urgency=low

  [ gregor herrmann ]
  * Fix "Tries to mkdir directory in home of building user": set HOME to a
    writable directory in debian/rules (closes: #609469).
  * debian/control: remove version from perl (build) dependency, lenny has
    already 5.10. Same for apt-file and 2.1.0.

  [ Nicholas Bamber ]
  * Added logic to parse special email change directives in the changelog
    so that the refresh command respects email changes (Closes: #609409)
  * Added myself to Uploaders
  * Various fixes for t/dists.t:
    - Added fix for .svn at the end of a filename rather than the middle
    - Second /dev/null check was attempting to diff an undefined value
    - Setting PERL5LIB (unsatisfactory work around for system(dh-make-perl) )

  [ Salvatore Bonaccorso ]
  * Email change: Salvatore Bonaccorso -> carnil@debian.org

  [ Gunnar Wolf ]
  * Removed myself from Uploaders, acknowledging reality

 -- Damyan Ivanov <dmn@debian.org>  Sat, 12 Feb 2011 17:23:06 +0200

dh-make-perl (0.71-1) unstable; urgency=low

  [ Ansgar Burchardt ]
  * DhMakePerl::Command::Packaging: Refer to "Debian systems" instead of
    "Debian GNU/Linux systems" in generated debian/copyright.

  [ Salvatore Bonaccorso ]
  * Improve regular expression to not match fields in Makefile.PL as
    MIN_PERL_VERSION to determine the version of the package. Thanks to
    Andrew Ruthven for reporting. (Closes: #596025)
  * Update my email address.

  [ gregor herrmann ]